added more specific api documentation for user
